  Changelog for the c-ares project

* October 7, 2009 (Yang Tse)
- Overhauled ares__get_hostent() Fixing out of bounds memory overwrite
  triggered with malformed /etc/hosts file. Improving parsing of /etc/hosts
  file. Validating requested address family. Ensuring that failures always
  return a NULL pointer. Adjusting header inclusions.

* 4 Sep 2009 (Daniel Stenberg)
- Jakub Hrozek added ares_parse_srv_reply() for SRV parsing

* 3 Aug 2009 (Daniel Stenberg)
- Joshua Kwan fixed the init routine to fill in the defaults for stuff that
  fails to get inited by other means. This fixes a case of when the c-ares
  init fails when internet access is fone.

- Timo Teras changed the reason code used in the resolve callback done when
  ares_cancel() is used, to be ARES_ECANCELLED instead of ARES_ETIMEOUT to
  better allow the callback to know what's happening.

* 14 Jul 2009 (Guenter Knauf)
- renamed generated config.h to ares_config.h to avoid any future clashes
  with config.h from other projects.
  
* June 8 2009 (Yang Tse)
- Removed buildconf.bat from release and daily snapshot archives. This
  file is only for CVS tree checkout builds.

* May 26 2009 (Yang Tse)
- Added --enable-curldebug configure option to enable and disable building
  with the low-level curl debug memory tracking 'feature' to allow decoupled
  setting from --enable-debug, allowing again to build c-ares independently
  out of the CVS tree.

  For the c-ares library option --enable-debug enables debug build features
  which are _not_ related with memory tracking. For the c-ares library when
  --enable-debug is given it does not enable the memory tracking feature. If
  you wish to enable the curl debug memory tracking you must use configure
  option --enable-curldebug explicitily to do so.

  Internally, definition of preprocessor symbol DEBUGBUILD restricts code
  which is only compiled for debug enabled builds. And symbol CURLDEBUG is