@@ -24,6 +24,6 @@ Fixed:
 Thanks go to these friendly people for their efforts and contributions:
 
  Phil Blundell, Japheth Cleaver, Yang Tse, Gregor Jasny, Joshua Kwan,
- Timo Teras, Jakub Hrozek
+ Timo Teras, Jakub Hrozek, John Engelhart
 
 Have fun!
